--- a/conda_env_for_testing.yml
+++ b/conda_env_for_testing.yml
@@ -1,4 +1,4 @@
-name: O2M
+name: O2MTesting
 channels:
   - kidzik
   - conda-forge
@@ -96,7 +96,7 @@ dependencies:
     - kiwisolver==1.1.0
     - matplotlib==3.2.1
     - monotonic==1.5
-    - mujoco-py==2.0.2.9
+    - mujoco-py==2.1.2.14
     - numpy==1.18.2
     - osim-rl==3.0.11
     - pillow==7.0.0
